--- a/index.html
+++ b/index.html
@@ -57,6 +57,46 @@
             <!-- <h1>Reported posts</h1> -->
         </div>
     </main>
+    <section class="main container mx-auto p-3">
+        <div class="qstn">
+            <h1>Q&A</h1>
+        </div>
+        <div>
+            <h3>Q1: How Does javascript Works?</h3>
+            <p>
+                JavaScript is a single- threaded programming language, and that implies it has a solitary Call Stack.
+                Hence it can do each thing in turn.
+                The Call Stack is a data structure which records principally where in the program we are. However, we
+                put it on the top of the mound, If we step into a function. However, we pop off the top of the mound, If
+                we return from a function. That’s all the stack can do.
+            </p>
+        </div>
+        <div>
+            <h3>Q2: What Does JavaScript Event Loop Do?</h3>
+            <p>
+                JS executes all operations on a single thread, but using a many smart data structures, it gives us the
+                vision of multi-threading.
+                The event loop is a constantly running process that monitors both the callback queue and the call stack.
+                Still, the event loop waits until it's empty and places the coming function from the callback queue to
+                the call stack., If the call stack. isn't empty .However, nothing will be, If the callback queue is
+                empty.
+            </p>
+        </div>
+        <div>
+            <h3>Q3: Difference Between Local Storage & Session Storage.</h3>
+            <p>
+                1.When Browser Closed , local storage data can't deleted. <br>
+                1.When Browser Closed , session storage data can be deleted. <br>
+
+                2. Storage Capacity of local storage is 5/10 MB. <br>
+                2. Storage Capacity of session storage is 5MB. <br>
+
+                3. local storage is readable for clients. <br>
+                3. session storage is not readable for clients. <br>
+
+            </p>
+        </div>
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
